Update background image URL for select-planets class

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -96,7 +96,7 @@ header {
 }
 
 .select-planets {
-  background-image: url(../public/images/planets-bg.webp);
+  background-image: url(/images/planets-bg.webp);
   background-size: cover;
   background-position: 50% 60%;
   background-repeat: no-repeat;
